src/styles/style.css
/* ... */
#toggl-button-edit-form {
  position: absolute;
  width: 240px !important;
  height: 240px;
  padding: 10px !important;
  -webkit-box-shadow: 0 1px 3px rgba(128,128,128,.5);
  -moz-box-shadow: 0 1px 3px rgba(128,128,128,.5);
  box-shadow: 0 1px 3px rgba(128,128,128,.5);
  -webkit-border-radius: 3px;
  border-radius: 3px;
  background-color: #ffffff;
  z-index: 999;
}

#toggl-button-edit-form .toggl-button{
  margin-left: 0 !important;
  border: none !important;
}
#toggl-button-edit-form .toggl-button:hover{
  background-color: transparent;
  cursor: default;
}

.toggl-button-row {
  margin: 0;
  padding: 10px 0;
}
.toggl-button-row label {
  display: block;
  font-size: 13px;
  height: 20px;
}
p.toggl-button-row.first {
  margin-top: 0;
  margin-bottom: 0;
}
.toggl-button-input {
  background: #f5f5f5;
  border: 1px solid #e1e1e1;
  font-size: 0.7em;  
  padding: 5px;
  width: 220px;
}
#toggl-button-description, #toggl-button-project {
  height: 35px !important;
  font-size: 13px;
  margin: 0;
  padding: 0 10px !important;
}
#toggl-button-project {
  width: 100% !important;
}

#toggl-button-hide, #toggl-button-update {
  height: 34px;
  font-size: 0.7em;
  text-transform: uppercase;
  padding: 10px 14px 8px;
  border: 1px solid #63b618;
  color: white;
  text-shadow: 0 1px 1px rgba(0,0,0,.25);
  font-weight: bold;
  font-size: 12px;
  display: inline-block;
  -webkit-box-shadow: 0 1px 1px rgba(0,0,0,.5);
  box-shadow: 0 1px 1px rgba(0,0,0,.5);
  background-color: #8dcc35;
  background-image: -webkit-gradient(linear, left top, left bottom, from(#8dcc35), to(#47a204));
  background-image: -webkit-linear-gradient(top, #8dcc35, #47a204);
  background-image:    -moz-linear-gradient(top, #8dcc35, #47a204);
  background-image:      -o-linear-gradient(top, #8dcc35, #47a204);
  background-image:         linear-gradient(to bottom, #8dcc35, #47a204);
  -webkit-border-radius: 3px;
  border-radius: 3px;
  border: none;
  cursor: pointer;
  font-family: inherit;
}
#toggl-button-hide{
  float: left;
}
#toggl-button-update {
  float: right;
}
#toggl-button-submit-row {
  position:absolute;
  left: 10px;
  right: 10px;
  bottom: 10px;
  margin: 0 !important;
}

/********* PIVOTAL *********/
.toggl-button.pivotal {
  margin-top: 10px;
}

/********* BITBUCKET *********/
.toggl-button.bitbucket {
  border-color: #ccc;
  margin-left:15px;
}

/********* GITHUB *********/
.toggl-button.github {
  padding-left: 21px;
  margin-left: 5px;
}

/********* YOUTRACK *********/
.toggl-button.youtrack {
  float: right;
}

/********* ASANA *********/
.toggl-button.asana {
  margin-left: 52px;
  margin-bottom: 5px;
  color: #596573;
  line-height: 22px;
  font-size: 12px;
  font-weight: 600;
}

/********* PODIO *********/
.toggl-button.podio {
  width: 65px;
  margin-left: 4px;
}

/********* GITLAB *********/
.toggl-button.gitlab {
  font-size: 75%;
  margin-left: 8px;
  padding-left: 21px;
}

/********* JIRA *********/
.toggl-button.jira {
  margin-top:.2em;
}

/********* UNFUDDLE *********/
.toggl-button.unfuddle {
  margin-left: 4px;
  line-height: 18px;
  padding-left: 18px;
  background-size: 16px;
}

/********* TRELLO *********/
.toggl-button.trello {
  text-decoration: none;
  cursor: pointer;
  color: #737373;
}

.checklist-item-button {
  position: absolute;
  top: 2px;
  right: 0;
}

.checklist-item-details-text {
  max-width: 94%;
}

/********* BASECAMP *********/
.toggl-button.basecamp {
  font-size: 12px;
  height: 14px;
  margin-left: 3px;
  line-height: 14px;
  padding-left: 19px;
  background-size: 17px;
  visibility: hidden;
}

/********* TEAMWEEK *********/
.toggl-button.teamweek-new {
  color: rgba(47,47,47,0.8);
  margin: 12px;
  margin-top: 18px;
}

/********* PRODUCTEEV *********/
.toggl-button.producteev {
  margin-left: 12px;
  margin-bottom: 2px;
}

/********* REDBOOTH *********/
.toggl-button.redbooth {
  font-size: 12px;
  line-height: 16px;
  padding-left: 18px;
  background-size: 16px;
}

/********* WORKSECTION *********/
#tmenu2 .toggl-button.worksection {
  margin-top: 9px;
  padding-top: 0px;
  line-height: 21px;
  padding-left: 21px;
}

/********* SIFTER *********/
.toggl-button.sifterapp {
  color: white;
  float: right;
}

.toggl-button.sifterapp.active {
  color: rgb(52, 255, 125) !important;
}

/********* GOOGLE DOCS *********/
.toggl-button.google-docs {
  background-size: 17px;
  padding-left: 19px;
}

.toggl-button.google-docs.min {
  margin-bottom: -10px;
  margin-left: 5px;
}

/********* REDMINE *********/
.toggl-button.redmine {
  float: right;
  font-size: .8em;
  font-weight: normal;
  margin-top: 4px;
}

/********* CAPSULECRM *********/
.toggl-button.capsule {
  line-height: 15px;
  background-position: 7% 40%;
  padding-left: 30px !important;
}

/****** Zendesk *********/
.toggl-button.zendesk {
  float: right;
  padding-right: 3em;
  margin-top: -1.5em;
} 

/****** Anydo *********/
.toggl-button.anydo {
  color: #099acb;
  margin-left: 10px;
}


/********* wunderlist *********/
.toggl-button.wunderlist {
  text-decoration: none;
  cursor: pointer;
  color: #737373;
  margin: 0px;
  display: inline;
}

.taskItem-toggl {
  z-index: 1;
  display: inline;
  margin-bottom: -20px;
  padding-top: -5px;
  padding-right: 10px;
  line-height: 100%;
  position: absolute;
  top: 8px;
  bottom: 0;
  left: 0;
}

.detailItem-toggl {
  position: relative;
  left: 10px;
  top: 32px;
}

.toggl > .taskItem-titleWrapper-title, .toggl > .taskItem-titleMeta-info {
  margin-left: 25px;
}



/****** todoist *********/
.toggl-button.todoist {
  font-size: 12px;
  padding-left: 20px;
  background-size: 18px;
  margin-left: 7px;
  visibility: hidden;
}

.toggl-button.todoist.active {
  visibility: visible;
}

.task_content_item:hover .toggl-button {
  visibility: visible;
}
/* ... */

